--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^6.19.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
     "zustand": "^4.5.2"
   },
